Update: - Update of training model to remove the debug modifications and enable image augmentation and fixed resizer of input image data - Updated sample_cli.txt to better indicate how to convert training checkpoints to output models - Updated conversion.py to generate the rosbag data

--- a/workspaces/custom_traffic_light_detection_workspace/objdetect/models/model/ssd_mobilenet_v1_tldt.config
+++ b/workspaces/custom_traffic_light_detection_workspace/objdetect/models/model/ssd_mobilenet_v1_tldt.config
@@ -36,14 +36,13 @@ model {
         aspect_ratios: 1.0
         aspect_ratios: 2.0
         aspect_ratios: 0.5
-        aspect_ratios: 3.0
         aspect_ratios: 0.3333
       }
     }
     image_resizer {
       fixed_shape_resizer {
-        height: 600
-        width: 800
+        height: 150
+        width: 200
       }
     }
     box_predictor {
@@ -70,9 +69,9 @@ model {
             }
           }
           batch_norm {
-            #train: true,
-            #scale: true,
-            #center: true,
+            train: true,
+            scale: true,
+            center: true,
             decay: 0.9997,
             epsilon: 0.001,
           }
@@ -131,8 +130,8 @@ model {
       batch_non_max_suppression {
         score_threshold: 1e-8
         iou_threshold: 0.6
-        max_detections_per_class: 100
-        max_total_detections: 100
+        max_detections_per_class: 50
+        max_total_detections: 50
       }
       score_converter: SIGMOID
     }
@@ -155,36 +154,36 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGUREDCarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/checkpoint/model.ckpt"
+  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/checkpoint/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  num_steps: 8000
+  num_steps: 200000
   data_augmentation_options {
     ssd_random_crop {
     }
   }
-    #data_augmentation_options {
-    #random_jitter_boxes {
-    #}
-  #}
-  #data_augmentation_options {
-  #  random_image_scale {
-  #  }
-  #}
-  #data_augmentation_options {
-  #  random_horizontal_flip {
-  #  }
-  #}
+    data_augmentation_options {
+    random_jitter_boxes {
+    }
+  }
+  data_augmentation_options {
+    random_image_scale {
+    }
+  }
+  data_augmentation_options {
+    random_horizontal_flip {
+    }
+  }
 }
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "~/projects/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/train.pb"
+    input_path: "PATH_TO_BE_CONFIGURED/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/train.pb"
   }
-  label_map_path: "~/projects/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/traffic_light_label_map.pbtxt"
+  label_map_path: "PATH_TO_BE_CONFIGURED/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/traffic_light_label_map.pbtxt"
 }
 
 eval_config: {
@@ -196,9 +195,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "~/projects/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/test.pb"
+    input_path: "PATH_TO_BE_CONFIGURED/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/test.pb"
   }
-  label_map_path: "~/projects/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/traffic_light_label_map.pbtxt"
+  label_map_path: "PATH_TO_BE_CONFIGURED/CarND-Capstone/workspaces/custom_traffic_light_detection_workspace/objdetect/data/traffic_light_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
